@@ -181,3 +181,14 @@ max-jobs=50
 # defined the rate of spawed worker per second as long
 # as there are jobs waiting
 spawn-rate=1
+
+
+# Workarounds
+
+# workaround for rc 25 bug
+# duplicate jobs from gearmand result in exit code 25 of plugins
+# because they are executed twice and get killed because of using
+# the same ressource.
+# Sending results (when exit code is 25 ) will be skipped with this
+# enabled.
+workaround_rc_25=off
