@@ -347,6 +347,17 @@ void send_result_back() {
         return;
     }
 
+    /* workaround for rc 25 bug
+     * duplicate jobs from gearmand result in exit code 25 of plugins
+     * because they are executed twice and get killed because of using
+     * the same ressource.
+     * Sending results (when exit code is 25 ) will be skipped with this
+     * enabled.
+     */
+    if( exec_job->return_code == 25 && mod_gm_opt->workaround_rc_25 == GM_ENABLED ) {
+        return;
+    }
+
     gm_log( GM_LOG_TRACE, "queue: %s\n", exec_job->result_queue );
     temp_buffer1[0]='\x0';
     snprintf( temp_buffer1, sizeof( temp_buffer1 )-1, "host_name=%s\ncore_start_time=%i.%i\nstart_time=%i.%i\nfinish_time=%i.%i\nlatency=%f\nreturn_code=%i\nexited_ok=%i\n",
