@@ -3,6 +3,8 @@ This file documents the revision history for mod_gearman.
 1.0.9  Mon Aug 15 16:05:23 CEST 2011
           - nicer error messages for send_multi when zero results transmitted
           - fixed sigsegv when reloading core in combination with exports options
+          - added optional workaround for plugins exiting with rc 25 because
+            of duplicate execution
 
 1.0.8  Fri Jul 22 22:21:34 CEST 2011
           - use identifier for error messages if set
